Fix scaling issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ GENERAL STYLES
 body {
     font-family: 'Maven Pro', sans-serif;
     line-height: 25px;
+    position: absolute;
+    width: 100vw;
 }
 
 .pad-bottom {
